# predlab

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  leaderboard.yml
admin/tui/: predlab.py
docker/postgres/: init-db.sh
docs/: ADMIN.md  API.md  OPERATIONS.md  PROJECT_OVERVIEW.md  PredLab-Club-Intro.pptx  REVIEW_REPORT.md  ROADMAP.md
docs/club/: README.md  charter.typ  presentation.typ
docs/telegram/: CHANNEL_PLAN.md  POSTS.md
examples/: README.md  predlab.py
kalshi-sim/: .env.example  .gitignore  Dockerfile  FOUNDATION.md  PHASE2.md  README.md  pyproject.toml
kalshi-sim/src/kalshi_sim/: __init__.py  config.py  db.py  main.py
kalshi-sim/src/kalshi_sim/api/: __init__.py  auth.py  markets.py  orderbooks.py  orders.py
kalshi-sim/src/kalshi_sim/clients/: __init__.py  kalshi_client.py
kalshi-sim/src/kalshi_sim/models/: __init__.py  api.py  db.py
kalshi-sim/src/kalshi_sim/services/: __init__.py  orderbook.py  paper_trading.py  sync.py
kalshi-sim/src/kalshi_sim/utils/: __init__.py  fp.py
kalshi-sim/tests/: __init__.py  conftest.py  test_admin_ops.py  test_api.py  test_leaderboard.py  test_paper_trading.py  test_roles.py
leaderboard-rs/: Cargo.toml  Dockerfile  build.rs
leaderboard-rs/.cargo/: config.toml
leaderboard-rs/src/: main.rs
polymarket-sim/: .env.example  .gitignore  AGENTS.md  Dockerfile  FOUNDATION.md  PHASE2.md  README.md  docker-compose.yml  pyproject.toml
polymarket-sim/scripts/: seed_demo_users.py
polymarket-sim/src/polymarket_sim/: config.py  db.py  main.py  util.py
polymarket-sim/src/polymarket_sim/clients/: gamma.py
polymarket-sim/src/polymarket_sim/models/: db.py  schemas.py
polymarket-sim/src/polymarket_sim/services/: auth.py  orderbook.py  paper_trading.py  sync.py
polymarket-sim/tests/: conftest.py  test_admin_ops.py  test_api.py  test_config.py  test_leaderboard.py  test_orderbook.py  test_paper_trading.py  test_roles.py  test_sync.py
predlab-gui/: Cargo.toml  INSTALL.md
predlab-gui/src/: config.rs  data.rs  engine.rs  lib.rs  main.rs  message.rs  ui.rs
predlab-gui/src/domain/: leaderboard.rs  mod.rs  polymarket.rs
predlab-gui/src/ui/: onboarding.rs  widgets.rs
predlab-gui/src/ui/views/: admin.rs  leaderboard.rs  markets.rs  mod.rs  portfolio.rs  settings.rs  trade.rs
predlab-gui/tests/: live_sims.rs
predlab-py/: README.md  pyproject.toml
predlab-py/src/predlab/: __init__.py
predlab-tui/: Cargo.toml
predlab-tui/src/: api.rs  app.rs  main.rs  theme.rs  ui.rs
predlab-util/: Cargo.toml
predlab-util/src/: lib.rs
ratatui-admin/: Cargo.toml
ratatui-admin/.cargo/: config.toml
ratatui-admin/src/: leaderboard.rs  lib.rs  main.rs  registry.rs
scripts/: gen_leaderboard.py
src/predlab/: cli.py
