[project]
name = "kalshi-sim"
version = "0.1.0"
description = "Kalshi Trade API v2 Simulator — paper trading for Prediction Markets Club (educational)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Teddy Tennant", email = "teddytennant@icloud.com"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.4",  # for background sync (optional, can use lifespan)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",  # already in main for client too
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
kalshi-sim = "kalshi_sim.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = ["E", "F", "I", "B", "W"]
extend-ignore = ["E501", "B008"]  # B008 for FastAPI Depends

[tool.ruff.isort]
known-first-party = ["kalshi_sim"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py312"]
