[package]
name = "leaderboard"
version = "0.1.0"
edition = "2021"
description = "PredLab club leaderboard — server-rendered combined net-worth standings"

[[bin]]
name = "leaderboard"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
# HTTP-only client (no TLS): the sims are reached over the internal docker network.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
strip = true
