[project]
name = "predlab"
version = "0.1.0"
description = "Client for the PredLab paper-trading API (Polymarket-style club simulator)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/predlab"]
