[package]
name = "predlab-tui"
version = "0.1.0"
edition = "2021"
description = "PredLab TUI: trade & track the club leaderboard from your terminal"
authors = ["Teddy Tennant <teddytennant@icloud.com>"]
license = "MIT"

[[bin]]
name = "predlab-tui"
path = "src/main.rs"

[dependencies]
predlab-util = { path = "../predlab-util" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
