[package]
name = "ratatui-admin"
version = "0.2.0"
edition = "2021"
description = "PredLab admin TUI: issue dual paper keys and view the club roster/leaderboard"

[lib]
name = "ratatui_admin"
path = "src/lib.rs"

[[bin]]
name = "predlab"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
